--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         var nn2 = Number(n2.value)
         var res = nn1 * nn2
         var local = document.querySelector('#result2')
-        local.innerHTML = ('O material tem ' + res + ' metros quadrados')
+        local.innerHTML = ('O local tem ' + res + ' metros quadrados')
         }
 
             
